backend general update